feat(service): Use api-definition package
