# apps/service/src/routes/sign-in.post.ts
@@ -1,22 +1,21 @@
+import { signInRoute, AuthRequest, AuthResponse } from "@ccc/api-definition"
+
 import { errors } from "../utils/errors"
 import { Token } from "../utils/token"
 import {
   RequestBodyValidation,
   validateRequestBody,
 } from "../utils/validateRequestBody"
-import { Route } from "./types"
+import { ExpressRoute } from "./types"
 
-type RequestBody = {
-  name: string
-  password: string
-}
+type SignInRoute = ExpressRoute<AuthRequest, AuthResponse>
 
-const Verifier: RequestBodyValidation<RequestBody> = {
+const Verifier: RequestBodyValidation<AuthRequest> = {
   name: { type: "string", required: true },
   password: { type: "string", required: true },
 }
 
-const handler: Route["handler"] = (request, response, DB) => {
+const handler: SignInRoute["handler"] = (request, response, DB) => {
   const { name, password } = validateRequestBody(request.body, Verifier)
   const userId = DB.validateCredentials(name, password)
   if (!userId) throw errors.BAD_REQUEST
@@ -24,9 +23,7 @@ const handler: Route["handler"] = (request, response, DB) => {
   response.header("Authorization", jwt).status(200).json({ userId })
 }
 
-export const route: Route = {
-  path: "/auth/login",
-  method: "post",
-  protect: false,
+export const route: SignInRoute = {
+  ...signInRoute,
   handler,
 }
